# products_test

./: .gitignore  Dockerfile  README.md  celery.py  docker-compose.yml  manage.py  pyproject.toml
products/: apps.py  models.py  periodic_tasks.py  serializers.py  tasks.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_id.py
products_test/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
