[tool.poetry]
name = "products-test"
version = "0.1.0"
description = ""
authors = ["yayo1983 <yazanenator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
django = "5.0.6"
djangorestframework = "3.15.2"
drf-yasg = "1.21.7"
inflection = "0.5.1"
packaging = "24.1"
pytz = "2024.1"
pyyaml = "6.0.1"
sqlparse = "0.5.0"
typing-extensions = "4.12.2"
uritemplate = "4.1.1"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
